argoCD/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comment
  labels:
    app: comment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: comment
  template:
    metadata:
      labels:
        app: comment
    spec:
      containers:
        - name: comment
          image: registry.uniproject.jp/yuito-it/comment:2.0.0
          ports:
            - containerPort: 3000
              name: default-port
            - containerPort: 4000
              name: secondary-port

      imagePullSecrets:
        - name: internal-harbor
