argoCD/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comment
spec:
  selector:
    app: comment
  ports:
    - port: 80
      targetPort: 3000
    - port: 81
      targetPort: 4000
